--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<nav class="header__nav">
 				<ul class="header__nav-list">
 					<li class="header__nav-item">
-						<a href="" class="header__nav-link">fmf</a>
+						<a href="http://maksimdygai.github.io/fmf/" class="header__nav-link">fmf</a>
 					</li>
 				</ul>
 			</nav>
