add link to horse club

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 					<li class="header__nav-item">
 						<a href="http://maksimdygai.github.io/fmf/" class="header__nav-link">fmf</a>
 					</li>
+					<li class="header__nav-item">
+						<a href="http://maksimdygai.github.io/horse-club/" class="header__nav-link progress">horse club</a>
+					</li>
 				</ul>
 			</nav>
 		</header>
