Nav font update, logo fix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 						<a href="http://maksimdygai.github.io/fmf/" class="header__nav-link">fmf</a>
 					</li>
 					<li class="header__nav-item">
-						<a href="http://maksimdygai.github.io/horse-club/" class="header__nav-link progress">horse club</a>
+						<a href="http://maksimdygai.github.io/horse-club/" class="header__nav-link">horse club</a>
 					</li>
 				</ul>
 			</nav>
