--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Maksim Dygai</title>
+	<link rel="icon" type="image/png" href="img/favicon.png" />
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
